<resources>
    <string name="app_name">TT 2020-B065</string>
    <string name="title_contacts">Contactos</string>
    <string name="title_dashboard">Notificaciones</string>
    <string name="title_datos">Datos del Usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_name">Nombre del contacto</string>
    <string name="newNameDialogTitle">Cambiar nombre de contacto:</string>
    <string name="newNameDialogAcceptingButton">Aceptar</string>
    <string name="newNameDialogCancelingButton">Cancelar</string>
    <string name="title_sensor_data_visualization">Datos del sensor</string>
    <string name="textoEncenderBluetooth">Encender bluetooth</string>
    <string name="textoVincularSensor">Vincular Sensor</string>
    <string name="title_usuario">Usuario</string>
</resources>
