<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_datos_usuario"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_datos" />

    <item
        android:id="@+id/navigation_visualizacion_datos_medidos"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/title_sensor_data_visualization" />

</menu>
