<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.martin.AndroidApp.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.martin.AndroidApp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_usuario"
        android:name="com.example.martin.AndroidApp.ui.usuario.UsuarioFragment"
        android:label="@string/title_usuario"
        tools:layout="@layout/fragment_usuario" />

    <fragment
        android:id="@+id/navigation_visualizacion_datos_medidos"
        android:name="com.example.martin.AndroidApp.ui.VisualizacionDatosMedidos.VisualizacionDatosMedidosFragment"
        android:label="@string/title_sensor_data_visualization"
        tools:layout="@layout/fragment_visualizacion_datos_medidos" />
</navigation>
